--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@
 \renewcommand{\star}{\ding{72} }
 
 \begin{document}
-	\textbf{\Large Based on LewdDolphin's Snow route notes, reformat by Hoishin}
+	\textbf{\Large Based on LewdDolphin's Snow route notes, reformatted by Hoishin}
 
 	Timing starts when you press New Game.
 
